Removed overflow, maintained fixed aspect ratio for all zones and container.
Finally the canvas dimensioning problem has been resolved!

--- a/styling.css
+++ b/styling.css
@@ -6,12 +6,13 @@ body {
     border: 1mm solid #bdbdbd;
     display: flex;
     flex-wrap: wrap;
-    overflow: scroll;
+    /*overflow: scroll; */
+    aspect-ratio: 1 / 1;
 }
 
 .zone {
-    flex-grow: 1;
-    flex-shrink: 1;
+    flex-grow: 0;
+    flex-shrink: 0;
     border: 0.5mm solid #c7c7c7;
     box-sizing: border-box;
     background-color: white;
